<resources>
    <string name="app_name">夜览</string>
    <string name="night_mode">夜间模式</string>
    <string name="learn_principle">了解工作原理</string>
    <string name="principle">工作原理</string>
    <string name="principle_info">本应用使用开源库来绕过普通应用无法访问 non-SDK 接口的限制，这种方式并不稳定，有可能导致应用发生崩溃。\n正常情况下，点击按钮后可能需要 1～2 秒才能完成配置更改，请您耐心等待一段时间。
    </string>
    <string name="close">关闭</string>
    <string name="bottom_logo">a android logo</string>
    <string name="health_connect">Health Connect</string>
    <string name="app_introduction">我的 Android 开发者工具</string>
</resources>