<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/day_night_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_mode"
            app:thumbIcon="@drawable/done_24px"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/principle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_principle"
            android:textSize="11sp"
            android:textColor="?attr/colorTertiary"
            app:icon="@drawable/help_24px"
            app:iconSize="12dp"
            app:iconTint="?attr/colorTertiary"
            />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/android_robot_head_2023"
        android:contentDescription="@string/bottom_logo" />

</FrameLayout>

